--- a/.travis.yml
+++ b/.travis.yml
@@ -4,14 +4,43 @@ php:
   - 5.4
   - 5.5
 
+env:
+  global:
+    - CORE_BRANCH=master
+  matrix:
+    - DB=sqlite
+
+branches:
+  only:
+    - master
+    - stable7
+
 before_install:
-  - cd ..
-  - git clone https://github.com/owncloud/core.git
-  - mv maps core/apps/
-  - cd core
-  - git submodule init
-  - git submodule update
-  - cd apps/maps
+#  - composer install
+  - wget https://raw.githubusercontent.com/owncloud/administration/master/travis-ci/before_install.sh
+  - bash ./before_install.sh maps $CORE_BRANCH $DB
+  - cd ../core
+  - php occ app:enable maps
 
 script:
-  - phpunit tests
+  # Test lint
+  - cd apps/maps
+  - sh -c "if [ '$DB' = 'sqlite' ]; then ant test; fi"
+
+  # Run phpunit tests
+  - cd tests/unit
+  - phpunit --configuration phpunit.xml
+
+  # Create coverage report
+  - wget https://scrutinizer-ci.com/ocular.phar
+  - php ocular.phar code-coverage:upload --format=php-clover clover.xml
+
+matrix:
+  include:
+    - php: 5.4
+      env: DB=mysql
+    - php: 5.4
+      env: DB=pgsql
+  allow_failures:
+    - php: hhvm
+  fast_finish: true
