--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ php:
   - 5.4
   - 5.5
   - 5.6
+  - 7
 
 env:
   global:
@@ -14,7 +15,6 @@ env:
 branches:
   only:
     - master
-    - stable7
 
 before_install:
 #  - composer install
@@ -41,6 +41,14 @@ matrix:
       env: DB=mysql
     - php: 5.4
       env: DB=pgsql
+    - php: 5.4
+      env: "DB=mysql CORE_BRANCH=stable8"
+    - php: 5.4
+      env: "DB=mysql CORE_BRANCH=stable8.1"
+    - php: 5.4
+      env: "DB=mysql CORE_BRANCH=stable8.2"
+    - php: 5.4
+      env: "DB=mysql CORE_BRANCH=stable7"
   allow_failures:
     - php: hhvm
   fast_finish: true
