--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,7 @@
 language: php
 php:
-  - 5.4
-  - 5.5
   - 5.6
-  - 7
+  - 7.0
 
 env:
   global:
@@ -38,12 +36,16 @@ script:
 
 matrix:
   include:
-    - php: 5.4
+    - php: 7.0
       env: DB=mysql
-    - php: 5.4
+    - php: 7.0
       env: DB=pgsql
     - php: 5.4
       env: "DB=mysql CORE_BRANCH=stable8.2"
+    - php: 5.4
+      env: "DB=mysql CORE_BRANCH=stable9"
+    - php: 5.4
+      env: "DB=mysql CORE_BRANCH=stable9.1"
   allow_failures:
     - php: hhvm
   fast_finish: true
