--- a/l10n/.tx/config
+++ b/l10n/.tx/config
@@ -2,7 +2,7 @@
 host = https://www.transifex.com
 lang_map = ja_JP: ja
 
-[owncloud.maps]
+[nextcloud.maps]
 file_filter = <lang>/maps.po
 source_file = templates/maps.pot
 source_lang = en
