--- a/.travis.yml
+++ b/.travis.yml
@@ -16,9 +16,9 @@ branches:
 
 before_install:
 #  - composer install
-  - wget https://raw.githubusercontent.com/owncloud/administration/master/travis-ci/before_install.sh
+  - wget https://raw.githubusercontent.com/nextcloud/travis_ci/master/before_install.sh
   - bash ./before_install.sh $APP_NAME $CORE_BRANCH $DB
-  - cd ../core
+  - cd ../server
   - php occ app:enable $APP_NAME
 
 script:
@@ -41,11 +41,9 @@ matrix:
     - php: 7.0
       env: DB=pgsql
     - php: 5.4
-      env: "DB=mysql CORE_BRANCH=stable8.2"
-    - php: 5.4
       env: "DB=mysql CORE_BRANCH=stable9"
     - php: 5.4
-      env: "DB=mysql CORE_BRANCH=stable9.1"
+      env: "DB=mysql CORE_BRANCH=stable10"
   allow_failures:
     - php: hhvm
   fast_finish: true
