display more information about opening hours

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "bower": "^1.8.0",
     "gulp": "^3.9.1",
     "gulp-cli": "^1.4.0",
-    "leaflet": "^1.2.0"
+    "leaflet": "^1.2.0",
+    "opening_hours": "^3.5.0"
   }
 }
