--- a/.travis.yml
+++ b/.travis.yml
@@ -2,17 +2,15 @@ language: php
 php:
   - 5.6
   - 7.0
+  - 7.1
+  - 7.2
 
 env:
   global:
     - CORE_BRANCH=master
     - APP_NAME=maps
   matrix:
-    - DB=sqlite
-
-branches:
-  only:
-    - master
+    - DB=mysql
 
 before_install:
 #  - composer install
@@ -22,7 +20,6 @@ before_install:
   - php occ app:enable $APP_NAME
 
 script:
-  # Test lint
   - cd apps/$APP_NAME
   # Test lint
   - find . -name \*.php -not -path './vendor/*' -exec php -l "{}" \;
@@ -36,14 +33,18 @@ script:
 
 matrix:
   include:
-    - php: 7.0
-      env: DB=mysql
-    - php: 7.0
+    - php: 7
+      env: DB=sqlite
+    - php: 7
       env: DB=pgsql
-    - php: 5.4
+    - php: 7
       env: "DB=mysql CORE_BRANCH=stable9"
-    - php: 5.4
+    - php: 7
       env: "DB=mysql CORE_BRANCH=stable10"
+    - php: 7
+      env: "DB=mysql CORE_BRANCH=stable11"
+    - php: 7
+      env: "DB=mysql CORE_BRANCH=stable12"
   allow_failures:
     - php: hhvm
   fast_finish: true
