--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ env:
     - DB=mysql
 
 before_install:
-#  - composer install
+  - composer install
   - wget https://raw.githubusercontent.com/nextcloud/travis_ci/master/before_install.sh
   - bash ./before_install.sh $APP_NAME $CORE_BRANCH $DB
   - cd ../server
