--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "leaflet.locatecontrol": "^0.62.0",
     "leaflet.markercluster": "^1.1.0",
     "leaflet-easybutton": "^2.4.0",
+    "leaflet.featuregroup.subgroup": "^1.0.2",
     "opening_hours": "^3.5.0"
   }
 }
