--- a/.travis.yml
+++ b/.travis.yml
@@ -23,9 +23,9 @@ matrix:
     fast_finish: true
 
 before_install:
-    # enable a display for running JavaScript tests
-    - export DISPLAY=:99.0
-    - sh -e /etc/init.d/xvfb start
+    ## enable a display for running JavaScript tests
+    #- export DISPLAY=:99.0
+    #- sh -e /etc/init.d/xvfb start
     - if [[ "$DB" == 'mysql' ]]; then sudo apt-get -y install mariadb-server; fi
     - nvm install 6
     - npm install -g npm@latest
