--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,6 @@ sudo: required
 dist: cosmic
 language: php
 php:
-    - 5.6
     - 7
 env:
     global:
@@ -14,11 +13,11 @@ matrix:
     allow_failures:
         - env: DB=pgsql CORE_BRANCH=master
     include:
-        - php: 5.6
+        - php: 7
           env: DB=sqlite
-        - php: 5.6
+        - php: 7
           env: DB=mysql
-        - php: 5.6
+        - php: 7
           env: DB=pgsql CORE_BRANCH=master
     fast_finish: true
 
@@ -27,14 +26,16 @@ before_install:
     #- export DISPLAY=:99.0
     #- sh -e /etc/init.d/xvfb start
     - if [[ "$DB" == 'mysql' ]]; then sudo apt-get -y install mariadb-server; fi
+    - if [[ "$DB" == 'pgsql' ]]; then sudo apt-get -y install postgresql; fi
+    - if [[ "$DB" == 'sqlite' ]]; then sudo apt-get -y install sqlite3; fi
     - nvm install 6
     - npm install -g npm@latest
     - make
-    - make appstore
+    #- make appstore
     # install core
     - cd ../
-    #- git clone https://github.com/nextcloud/server.git --recursive --depth 1 -b $CORE_BRANCH nextcloud
-    - wget -q https://download.nextcloud.com/server/releases/nextcloud-15.0.2.zip ; unzip -q nextcloud-15.0.2.zip ; rm nextcloud-15.0.2.zip
+    - git clone https://github.com/nextcloud/server.git --recursive --depth 1 -b $CORE_BRANCH nextcloud
+    #- wget -q https://download.nextcloud.com/server/releases/nextcloud-15.0.2.zip ; unzip -q nextcloud-15.0.2.zip ; rm nextcloud-15.0.2.zip
     - mv maps nextcloud/apps/
 
 before_script:
