--- a/.travis.yml
+++ b/.travis.yml
@@ -19,6 +19,7 @@ matrix:
           env: DB=mysql
         - php: 7.2
           env: DB=pgsql CORE_BRANCH=master
+          services: postgresql
     fast_finish: true
 
 before_install:
@@ -26,7 +27,7 @@ before_install:
     #- export DISPLAY=:99.0
     #- sh -e /etc/init.d/xvfb start
     - if [[ "$DB" == 'mysql' ]]; then sudo apt-get -y install mariadb-server; fi
-    - if [[ "$DB" == 'pgsql' ]]; then sudo apt-get -y install postgresql; fi
+    #- if [[ "$DB" == 'pgsql' ]]; then sudo apt-get -y install postgresql; fi
     - if [[ "$DB" == 'sqlite' ]]; then sudo apt-get -y install sqlite3; fi
     - nvm install 6
     - npm install -g npm@latest
@@ -39,15 +40,15 @@ before_install:
     - mv maps nextcloud/apps/
 
 before_script:
-    - if [[ "$DB" == 'pgsql' ]]; then createuser -U travis -s oc_autotest; fi
-    - if [[ "$DB" == 'mysql' ]]; then mysql -u root -e 'create database oc_autotest;'; fi
-    - if [[ "$DB" == 'mysql' ]]; then mysql -u root -e "CREATE USER 'oc_autotest'@'localhost' IDENTIFIED BY '';"; fi
-    - if [[ "$DB" == 'mysql' ]]; then mysql -u root -e "grant all on oc_autotest.* to 'oc_autotest'@'localhost';"; fi
+    - if [[ "$DB" == 'pgsql' ]]; then sudo createuser -U postgres -s oc_autotest; fi
+    - if [[ "$DB" == 'mysql' ]]; then sudo mysql -u root -e 'create database oc_autotest;'; fi
+    - if [[ "$DB" == 'mysql' ]]; then sudo mysql -u root -e "CREATE USER 'oc_autotest'@'localhost' IDENTIFIED BY '';"; fi
+    - if [[ "$DB" == 'mysql' ]]; then sudo mysql -u root -e "grant all on oc_autotest.* to 'oc_autotest'@'localhost';"; fi
     - cd nextcloud
     - mkdir data
     - ./occ maintenance:install --database-name oc_autotest --database-user oc_autotest --admin-user admin --admin-pass admin --database $DB --database-pass=''
     - ./occ app:enable maps
-    - php -S localhost:8080 &
+    #- php -S localhost:8080 &
     - cd apps/maps
 
 script:
@@ -56,5 +57,5 @@ script:
 after_failure:
     - cat ../../data/nextcloud.log
 
-addons:
-    firefox: "latest"
+#addons:
+#    firefox: "latest"
