add mouse position control

--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "leaflet.featuregroup.subgroup": "^1.0.2",
     "leaflet.locatecontrol": "^0.62.0",
     "leaflet.markercluster": "^1.1.0",
+    "leaflet-mouse-position": "^1.0.4",
     "nouislider": "^13.1.4",
     "opening_hours": "^3.5.0"
   }
