--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "leaflet.markercluster": "^1.1.0",
     "leaflet-mouse-position": "^1.0.4",
     "leaflet-contextmenu": "^1.4.0",
+    "leaflet.elevation": "^0.0.3",
+    "d3": "^3.5.17",
     "nouislider": "^13.1.4",
     "opening_hours": "^3.5.0"
   }
