refs #44 update .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -45,6 +45,9 @@ build/Release
 # Dependency directories
 node_modules/
 jspm_packages/
+vendor/
+composer.lock
+package-lock.json
 
 # Typescript v1 declaration files
 typings/
