--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "test": "node node_modules/gulp-cli/bin/gulp.js karma",
-    "prebuild": "npm install && node_modules/bower/bin/bower install && node_modules/bower/bin/bower update",
+    "prebuild": "npm install",
     "build": "node node_modules/gulp-cli/bin/gulp.js"
   },
   "repository": {
@@ -25,7 +25,6 @@
   },
   "homepage": "https://github.com/nextcloud/maps",
   "dependencies": {
-    "bower": "^1.8.0",
     "gulp": "^4.0.0",
     "gulp-cli": "^2.1.0",
     "leaflet": "^1.4.0",
