user_agent is now more like a device name
Signed-off-by: Julien Veyssier <eneiluj@posteo.net>

--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "leaflet.elevation": "^0.0.3",
     "d3": "^3.5.17",
     "nouislider": "^13.1.4",
+    "ua-parser-js": "^0.7.20",
     "opening_hours": "^3.5.0"
   }
 }
