Implement favorite sharing prototype
Signed-off-by: Paul Schwörer <hello@paulschwoerer.de>

--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
   "scripts": {
     "test": "node node_modules/gulp-cli/bin/gulp.js karma",
     "prebuild": "npm install",
-    "build": "node node_modules/gulp-cli/bin/gulp.js"
+    "build-old": "node node_modules/gulp-cli/bin/gulp.js",
+    "build": "NODE_ENV=production webpack --progress --hide-modules --config webpack.prod.js",
+    "dev": "NODE_ENV=development webpack --config webpack.dev.js",
+    "watch": "NODE_ENV=development webpack --progress --watch --config webpack.dev.js"
   },
   "repository": {
     "type": "git",
@@ -25,23 +28,76 @@
   },
   "homepage": "https://github.com/nextcloud/maps",
   "dependencies": {
+    "@nextcloud/vue": "^1.1.0",
+    "d3": "^3.5.17",
     "gulp": "^4.0.0",
     "gulp-cli": "^2.1.0",
-    "leaflet": "^1.4.0",
+    "hammerjs": "^2.0.8",
+    "leaflet": "^1.5.1",
+    "leaflet-contextmenu": "^1.4.0",
     "leaflet-control-geocoder": "^1.7.0",
     "leaflet-easybutton": "^2.4.0",
     "leaflet-routing-machine": "^3.2.12",
+    "leaflet.elevation": "^0.0.3",
     "leaflet.featuregroup.subgroup": "^1.0.2",
     "leaflet.locatecontrol": "^0.67.0",
     "leaflet.markercluster": "^1.4.0",
     "leaflet-mouse-position": "^1.0.4",
-    "leaflet-contextmenu": "^1.4.0",
-    "leaflet.elevation": "^0.0.3",
     "mapbox-gl": "^1.4.1",
     "mapbox-gl-leaflet": "^0.0.11",
-    "d3": "^3.5.17",
     "nouislider": "^14.0.2",
+    "opening_hours": "^3.5.0",
     "ua-parser-js": "^0.7.20",
-    "opening_hours": "^3.5.0"
+    "vue": "^2.6.10",
+    "vue-types": "^1.6.0",
+    "vue2-leaflet": "^2.2.1",
+    "vue2-leaflet-markercluster": "^3.1.0",
+    "vuex": "^3.1.1"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.6.4",
+    "@babel/plugin-proposal-object-rest-spread": "^7.6.2",
+    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
+    "@babel/preset-env": "^7.6.3",
+    "babel-core": "^7.0.0-bridge.0",
+    "babel-eslint": "^10.0.3",
+    "babel-jest": "^24.9.0",
+    "babel-loader": "^8.0.6",
+    "browserslist-config-nextcloud": "0.1.0",
+    "css-loader": "^3.2.0",
+    "eslint": "^6.6.0",
+    "eslint-config-airbnb-base": "^14.0.0",
+    "eslint-config-prettier": "^6.5.0",
+    "eslint-config-standard": "^14.1.0",
+    "eslint-friendly-formatter": "^4.0.1",
+    "eslint-loader": "^3.0.2",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-node": "^10.0.0",
+    "eslint-plugin-prettier": "^3.1.1",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-standard": "^4.0.1",
+    "eslint-plugin-vue": "^5.2.3",
+    "file-loader": "^4.2.0",
+    "jest": "^24.9.0",
+    "jest-serializer-vue": "^2.0.2",
+    "jsdom": "^15.1.1",
+    "jsdom-global": "^3.0.2",
+    "node-sass": "^4.13.0",
+    "prettier": "^1.18.2",
+    "raw-loader": "^3.1.0",
+    "sass-loader": "^8.0.0",
+    "stylelint": "^11.1.1",
+    "stylelint-config-recommended-scss": "^4.0.0",
+    "stylelint-config-standard": "^19.0.0",
+    "stylelint-scss": "^3.12.0",
+    "stylelint-webpack-plugin": "^1.0.3",
+    "svg-sprite": "^1.5.0",
+    "terser-webpack-plugin": "^2.2.1",
+    "vue-jest": "^3.0.5",
+    "vue-loader": "^15.7.1",
+    "vue-template-compiler": "^2.6.10",
+    "webpack": "^4.41.2",
+    "webpack-cli": "^3.3.9",
+    "webpack-merge": "^4.2.2"
   }
 }
