--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "leaflet-mouse-position": "^1.0.4",
     "leaflet-contextmenu": "^1.4.0",
     "leaflet.elevation": "^0.0.3",
+    "mapbox-gl": "^1.4.1",
+    "mapbox-gl-leaflet": "^0.0.10",
     "d3": "^3.5.17",
     "nouislider": "^14.0.2",
     "ua-parser-js": "^0.7.20",
