--- a/package.json
+++ b/package.json
@@ -66,8 +66,7 @@
     "browserslist-config-nextcloud": "0.1.0",
     "css-loader": "^3.2.0",
     "eslint": "^6.6.0",
-    "eslint-config-airbnb-base": "^14.0.0",
-    "eslint-config-prettier": "^6.5.0",
+    "eslint-config-prettier": "^6.7.0",
     "eslint-config-standard": "^14.1.0",
     "eslint-friendly-formatter": "^4.0.1",
     "eslint-loader": "^3.0.2",
@@ -83,7 +82,7 @@
     "jsdom": "^15.1.1",
     "jsdom-global": "^3.0.2",
     "node-sass": "^4.13.0",
-    "prettier": "^1.18.2",
+    "prettier-loader": "^3.3.0",
     "raw-loader": "^3.1.0",
     "sass-loader": "^8.0.0",
     "stylelint": "^11.1.1",
