--- a/package.json
+++ b/package.json
@@ -12,7 +12,11 @@
     "build-old": "node node_modules/gulp-cli/bin/gulp.js",
     "build": "NODE_ENV=production webpack --progress --hide-modules --config webpack.prod.js",
     "dev": "NODE_ENV=development webpack --config webpack.dev.js",
-    "watch": "NODE_ENV=development webpack --progress --watch --config webpack.dev.js"
+    "watch": "NODE_ENV=development webpack --progress --watch --config webpack.dev.js",
+    "lint": "eslint --ext .js,.vue src",
+    "lint:fix": "eslint --ext .js,.vue src --fix",
+    "stylelint": "stylelint -f verbose --config .stylelintrc.json src",
+    "stylelint:fix": "stylelint --config .stylelintrc.json --fix src"
   },
   "repository": {
     "type": "git",
@@ -67,14 +71,12 @@
     "css-loader": "^3.2.0",
     "eslint": "^6.6.0",
     "eslint-config-nextcloud": "^0.1.1",
-    "eslint-config-prettier": "^6.7.0",
     "eslint-config-standard": "^14.1.0",
     "eslint-friendly-formatter": "^4.0.1",
     "eslint-loader": "^3.0.2",
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-nextcloud": "^0.3.0",
     "eslint-plugin-node": "^10.0.0",
-    "eslint-plugin-prettier": "^3.1.1",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1",
     "eslint-plugin-vue": "^6.1.2",
@@ -84,7 +86,6 @@
     "jsdom": "^15.1.1",
     "jsdom-global": "^3.0.2",
     "node-sass": "^4.13.1",
-    "prettier-loader": "^3.3.0",
     "raw-loader": "^3.1.0",
     "sass-loader": "^8.0.0",
     "stylelint": "^11.1.1",
