--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "test": "tests"
   },
   "scripts": {
-    "test": "node node_modules/gulp-cli/bin/gulp.js karma",
-    "prebuild": "npm install",
-    "build": "node node_modules/gulp-cli/bin/gulp.js"
+    "dev": "NODE_ENV=development npx webpack --config webpack.dev.js",
+    "watch": "NODE_ENV=development npx webpack --progress --watch --config webpack.dev.js",
+    "build": "NODE_ENV=production npx webpack --progress --hide-modules --config webpack.prod.js"
   },
   "repository": {
     "type": "git",
@@ -24,24 +24,48 @@
     "url": "https://github.com/nextcloud/maps/issues"
   },
   "homepage": "https://github.com/nextcloud/maps",
+  "browserslist": [
+    "extends @nextcloud/browserslist-config"
+  ],
   "dependencies": {
-    "gulp": "^4.0.0",
-    "gulp-cli": "^2.1.0",
+    "@fortawesome/fontawesome-free": "^5.12.1",
+    "@nextcloud/router": "^1.0.0",
+    "d3": "^3.5.17",
+    "i18next-client": "^1.11.4",
+    "install": "^0.13.0",
+    "jquery": "^3.4.1",
     "leaflet": "^1.4.0",
+    "leaflet-contextmenu": "^1.4.0",
     "leaflet-control-geocoder": "^1.7.0",
     "leaflet-easybutton": "^2.4.0",
+    "leaflet-mouse-position": "^1.0.4",
     "leaflet-routing-machine": "^3.2.12",
+    "leaflet.elevation": "0.0.3",
     "leaflet.featuregroup.subgroup": "^1.0.2",
     "leaflet.locatecontrol": "^0.67.0",
     "leaflet.markercluster": "^1.4.0",
-    "leaflet-mouse-position": "^1.0.4",
-    "leaflet-contextmenu": "^1.4.0",
-    "leaflet.elevation": "^0.0.3",
+    "lrm-graphhopper": "^1.3.0",
     "mapbox-gl": "^1.4.1",
     "mapbox-gl-leaflet": "^0.0.11",
-    "d3": "^3.5.17",
     "nouislider": "^14.0.2",
-    "ua-parser-js": "^0.7.20",
-    "opening_hours": "^3.5.0"
+    "opening_hours": "^3.5.0",
+    "ua-parser-js": "^0.7.20"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.8.4",
+    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
+    "@babel/preset-env": "^7.8.4",
+    "@nextcloud/browserslist-config": "^1.0.0",
+    "babel-loader": "^8.0.6",
+    "clean-webpack-plugin": "^3.0.0",
+    "css-loader": "^3.4.2",
+    "moment": "^2.24.0",
+    "node-sass": "^4.13.1",
+    "sass-loader": "^8.0.2",
+    "url-loader": "^3.0.0",
+    "vue-loader": "^15.8.3",
+    "webpack": "^4.41.5",
+    "webpack-cli": "^3.3.10",
+    "webpack-merge": "^4.2.2"
   }
 }
