--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "lint": "eslint --ext .js,.vue src",
     "lint:fix": "eslint --ext .js,.vue src --fix",
     "stylelint": "stylelint -f verbose --config .stylelintrc.json src",
-    "stylelint:fix": "stylelint --config .stylelintrc.json
+    "stylelint:fix": "stylelint --config .stylelintrc.json"
   },
   "repository": {
     "type": "git",
@@ -32,25 +32,25 @@
     "extends @nextcloud/browserslist-config"
   ],
   "dependencies": {
-    "@nextcloud/vue": "^1.1.0",
     "@fortawesome/fontawesome-free": "^5.12.1",
     "@nextcloud/router": "^1.0.0",
+    "@nextcloud/vue": "^1.1.0",
     "d3": "^3.5.17",
     "i18next-client": "^1.11.4",
-    "install": "^0.13.0",
     "leaflet": "^1.4.0",
+    "leaflet-contextmenu": "^1.4.0",
     "leaflet-control-geocoder": "^1.7.0",
     "leaflet-easybutton": "^2.4.0",
+    "leaflet-mouse-position": "^1.0.4",
     "leaflet-routing-machine": "^3.2.12",
+    "leaflet.elevation": "^0.0.3",
     "leaflet.featuregroup.subgroup": "^1.0.2",
     "leaflet.locatecontrol": "^0.67.0",
     "leaflet.markercluster": "^1.4.0",
-    "leaflet-mouse-position": "^1.0.4",
-    "leaflet-contextmenu": "^1.4.0",
-    "leaflet.elevation": "^0.0.3",
     "lrm-graphhopper": "^1.3.0",
     "mapbox-gl": "^1.4.1",
     "mapbox-gl-leaflet": "^0.0.11",
+    "moment": "^2.24.0",
     "nouislider": "^14.0.2",
     "opening_hours": "^3.5.0",
     "ua-parser-js": "^0.7.20",
@@ -63,11 +63,12 @@
   "devDependencies": {
     "@babel/core": "^7.8.4",
     "@babel/plugin-proposal-object-rest-spread": "^7.6.2",
-    "@babel/plugin-syntax-dynamic-import": "^7.8.4",
+    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "@babel/preset-env": "^7.8.4",
     "@nextcloud/browserslist-config": "^1.0.0",
     "babel-eslint": "^10.0.3",
     "babel-loader": "^8.0.6",
+    "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^3.2.0",
     "eslint": "^6.6.0",
     "eslint-config-nextcloud": "^0.1.1",
@@ -90,12 +91,10 @@
     "sass-loader": "^8.0.2",
     "stylelint": "^11.1.1",
     "stylelint-config-recommended-scss": "^4.0.0",
-    "stylelint-config-standard": "^19.0.0",
     "stylelint-scss": "^3.12.0",
     "stylelint-webpack-plugin": "^1.0.3",
     "svg-sprite": "^1.5.0",
     "url-loader": "^3.0.0",
-    "terser-webpack-plugin": "^2.2.1",
     "vue-loader": "^15.8.3",
     "vue-template-compiler": "^2.6.10",
     "webpack": "^4.41.5",
