--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   ],
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.12.1",
+    "@nextcloud/initial-state": "^1.1.2",
     "@nextcloud/router": "^1.0.0",
     "d3": "^3.5.17",
     "i18next-client": "^1.11.4",
