Initial loading map from a specific path. Favorites are loaded from there.
Signed-off-by: Arne Hamann <kontakt+github@arne.email>

--- a/.eslintignore
+++ b/.eslintignore
@@ -9,4 +9,5 @@ src/nonLocalizedPhotosController.js
 src/photosController.js
 src/script.js
 src/tracksController.js
+src/myMapsController.js
 src/utils.js
