make it work with mapbox
Signed-off-by: Julien Veyssier <eneiluj@posteo.net>

--- a/package.json
+++ b/package.json
@@ -35,6 +35,10 @@
     "@fortawesome/fontawesome-free": "^5.12.1",
     "@nextcloud/router": "^1.0.0",
     "@nextcloud/vue": "^1.1.0",
+    "@nextcloud/moment": "^1.1.1",
+    "@nextcloud/dialogs": "^2.0.1",
+    "@nextcloud/axios": "^1.3.3",
+    "@nextcloud/auth": "^1.3.0",
     "d3": "^3.5.17",
     "i18next-client": "^1.11.4",
     "leaflet": "^1.4.0",
@@ -50,6 +54,9 @@
     "lrm-graphhopper": "^1.3.0",
     "mapbox-gl": "^1.4.1",
     "mapbox-gl-leaflet": "^0.0.11",
+    "@mapbox/mapbox-gl-style-spec": "13.11.0",
+    "vuelayers": "0.11.27",
+    "ol-mapbox-style": "4.3.1",
     "moment": "^2.24.0",
     "nouislider": "^14.0.2",
     "opening_hours": "^3.5.0",
