--- a/package.json
+++ b/package.json
@@ -2,18 +2,18 @@
   "name": "maps",
   "version": "0.0.7",
   "description": "Maps app",
-  "main": "index.js",
+  "main": "main.js",
   "directories": {
     "test": "tests"
   },
   "scripts": {
-    "dev": "NODE_ENV=development npx webpack --config webpack.dev.js",
-    "watch": "NODE_ENV=development npx webpack --progress --watch --config webpack.dev.js",
-    "build": "NODE_ENV=production npx webpack --progress --hide-modules --config webpack.prod.js",
+    "dev": "NODE_ENV=development npx webpack --progress --config webpack.js",
+    "watch": "NODE_ENV=development npx webpack --progress --watch --config webpack.js",
+    "build": "NODE_ENV=production npx webpack --progress --hide-modules --config webpack.js",
     "lint": "eslint --ext .js,.vue src",
     "lint:fix": "eslint --ext .js,.vue src --fix",
-    "stylelint": "stylelint -f verbose --config .stylelintrc.json src",
-    "stylelint:fix": "stylelint --config .stylelintrc.json"
+    "stylelint": "stylelint **/*.css **/*.scss **/*.vue",
+    "stylelint:fix": "stylelint **/*.css **/*.scss **/*.vue --fix"
   },
   "repository": {
     "type": "git",
@@ -33,11 +33,13 @@
   ],
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.12.1",
-    "@nextcloud/router": "^1.0.0",
-    "@nextcloud/vue": "^1.1.0",
+    "@nextcloud/router": "^1.1.0",
+    "@nextcloud/vue": "^3.2.0",
     "@nextcloud/moment": "^1.1.1",
+    "@nextcloud/axios": "^1.5.0",
+    "@nextcloud/dialogs": "^3.0.0",
+    "@nextcloud/l10n": "^1.4.1",
     "d3": "^3.5.17",
-    "i18next-client": "^1.11.4",
     "leaflet": "^1.7.1",
     "leaflet-contextmenu": "^1.4.0",
     "leaflet-control-geocoder": "^1.13.0",
@@ -69,38 +71,41 @@
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "@babel/preset-env": "^7.11.5",
     "@nextcloud/browserslist-config": "^1.0.0",
-    "babel-eslint": "^10.0.3",
+    "@nextcloud/eslint-config": "^3.0.0",
+    "@nextcloud/eslint-plugin": "^2.0.0",
+    "@nextcloud/webpack-vue-config": "^2.0.0",
+    "babel-eslint": "^10.1.0",
     "babel-loader": "^8.1.0",
     "clean-webpack-plugin": "^3.0.0",
-    "css-loader": "^3.2.0",
-    "eslint": "^5.16.0",
-    "eslint-config-nextcloud": "^0.1.1",
-    "eslint-config-standard": "^12.0.0",
-    "eslint-friendly-formatter": "^4.0.1",
-    "eslint-loader": "^3.0.3",
-    "eslint-plugin-import": "^2.18.2",
-    "eslint-plugin-nextcloud": "^0.3.0",
-    "eslint-plugin-node": "^10.0.0",
+    "css-loader": "^5.0.1",
+    "eslint": "^7.13.0",
+    "eslint-config-standard": "^16.0.1",
+    "eslint-loader": "^4.0.2",
+    "eslint-webpack-plugin": "^2.3.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1",
-    "eslint-plugin-vue": "^5.2.3",
-    "file-loader": "^6.1.0",
+    "eslint-plugin-vue": "^7.1.0",
+    "eslint-friendly-formatter": "^4.0.1",
+    "file-loader": "^6.2.0",
     "jest": "^26.4.2",
     "jest-serializer-vue": "^2.0.2",
-    "jsdom": "^15.1.1",
+    "jsdom": "^16.4.0",
     "jsdom-global": "^3.0.2",
-    "node-sass": "^4.14.1",
+    "node-sass": "^5.0.0",
     "raw-loader": "^4.0.1",
     "sass-loader": "^10.0.2",
-    "stylelint": "^13.7.1",
-    "stylelint-config-recommended-scss": "^4.0.0",
-    "stylelint-scss": "^3.12.0",
-    "stylelint-webpack-plugin": "^1.0.3",
+    "stylelint": "^13.7.2",
+    "stylelint-config-recommended-scss": "^4.2.0",
+    "stylelint-scss": "^3.18.0",
+    "stylelint-webpack-plugin": "^2.1.1",
     "url-loader": "^4.1.0",
+    "style-loader": "^2.0.0",
     "vue-loader": "^15.9.3",
     "vue-template-compiler": "^2.6.12",
-    "webpack": "^4.44.2",
-    "webpack-cli": "^3.3.11",
-    "webpack-merge": "^5.1.4"
+    "webpack": "^5.4.0",
+    "webpack-cli": "^4.2.0",
+    "webpack-merge": "^5.3.0"
   }
 }
