--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "vue-types": "^2.0.1",
     "vue2-leaflet": "^2.6.0",
     "vue2-leaflet-markercluster": "^3.1.0",
+    "vue-click-outside": "^1.1.0",
     "vuex": "^3.5.1"
   },
   "devDependencies": {
