--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@nextcloud/axios": "^1.5.0",
     "@nextcloud/dialogs": "^3.0.0",
     "@nextcloud/l10n": "^1.4.1",
+    "@nextcloud/auth": "^1.3.0",
     "d3": "^3.5.17",
     "leaflet": "1.5.1",
     "leaflet-contextmenu": "^1.4.0",
