--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "dev": "NODE_ENV=development npx webpack --progress --config webpack.js",
     "watch": "NODE_ENV=development npx webpack --progress --watch --config webpack.js",
-    "build": "NODE_ENV=production npx webpack --progress --hide-modules --config webpack.js",
+    "build": "NODE_ENV=production npx webpack --progress --config webpack.js",
     "lint": "eslint --ext .js,.vue src",
     "lint:fix": "eslint --ext .js,.vue src --fix",
     "stylelint": "stylelint **/*.css **/*.scss **/*.vue",
