--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "vue2-leaflet": "^2.6.0",
     "vue2-leaflet-markercluster": "^3.1.0",
     "vue-click-outside": "^1.1.0",
+    "vue-clipboard2": "^0.3.1",
     "vuex": "^3.5.1"
   },
   "devDependencies": {
