--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
   "devDependencies": {
     "lodash": "^4.17.20",
     "country-language": "^0.1.7",
+    "i18next-client": "^1.11.4",
     "@types/leaflet": "^1.5.4",
     "@babel/core": "^7.11.6",
     "@babel/plugin-proposal-object-rest-spread": "^7.6.2",
