--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@nextcloud/l10n": "^1.4.1",
     "@nextcloud/auth": "^1.3.0",
     "@nextcloud/paths": "^1.1.2",
+    "axios": "^0.21.0",
     "d3": "^3.5.17",
     "leaflet": "1.5.1",
     "leaflet-contextmenu": "^1.4.0",
