--- a/package.json
+++ b/package.json
@@ -42,14 +42,15 @@
     "@nextcloud/auth": "^1.3.0",
     "@nextcloud/paths": "^1.1.2",
     "axios": "^0.21.0",
-    "d3": "^3.5.17",
+    "d3": "^5.15.0",
     "leaflet": "1.5.1",
     "leaflet-contextmenu": "^1.4.0",
     "leaflet-control-geocoder": "^1.13.0",
     "leaflet-easybutton": "^2.4.0",
     "leaflet-mouse-position": "^1.0.4",
     "leaflet-routing-machine": "^3.2.12",
-    "leaflet.elevation": "^0.0.3",
+    "@raruto/leaflet-elevation": "^1.5.1",
+    "geojson": "^0.5.0",
     "leaflet.featuregroup.subgroup": "^1.0.2",
     "leaflet.locatecontrol": "^0.72.0",
     "leaflet.markercluster": "^1.4.0",
