--- a/package.json
+++ b/package.json
@@ -32,86 +32,85 @@
     "extends @nextcloud/browserslist-config"
   ],
   "dependencies": {
-    "@fortawesome/fontawesome-free": "^5.12.1",
-    "@nextcloud/router": "^1.1.0",
-    "@nextcloud/vue": "^3.3.1",
-    "@nextcloud/moment": "^1.1.1",
-    "@nextcloud/axios": "^1.5.0",
+    "@fortawesome/fontawesome-free": "^5.15.2",
+    "@nextcloud/auth": "^1.3.0",
+    "@nextcloud/axios": "^1.6.0",
     "@nextcloud/dialogs": "^3.0.0",
     "@nextcloud/l10n": "^1.4.1",
-    "@nextcloud/auth": "^1.3.0",
+    "@nextcloud/moment": "^1.1.1",
     "@nextcloud/paths": "^1.1.2",
+    "@nextcloud/router": "^1.1.0",
+    "@nextcloud/vue": "^3.5.4",
+    "@raruto/leaflet-elevation": "^1.5.1",
     "axios": "^0.21.0",
     "d3": "^5.15.0",
+    "geojson": "^0.5.0",
     "leaflet": "1.5.1",
     "leaflet-contextmenu": "^1.4.0",
     "leaflet-control-geocoder": "^2.1.0",
     "leaflet-easybutton": "^2.4.0",
     "leaflet-mouse-position": "^1.0.4",
     "leaflet-routing-machine": "^3.2.12",
-    "@raruto/leaflet-elevation": "^1.5.1",
-    "geojson": "^0.5.0",
     "leaflet.featuregroup.subgroup": "^1.0.2",
-    "leaflet.locatecontrol": "^0.72.0",
+    "leaflet.locatecontrol": "^0.72.2",
     "leaflet.markercluster": "^1.4.0",
     "lrm-graphhopper": "^1.3.0",
-    "mapbox-gl": "^2.0.1",
+    "mapbox-gl": "^2.1.0",
     "mapbox-gl-leaflet": "^0.0.14",
     "nouislider": "^14.0.2",
     "opening_hours": "^3.5.0",
     "ua-parser-js": "^0.7.23",
     "vue": "^2.6.12",
-    "vue-types": "^2.0.1",
-    "vue2-leaflet": "^2.6.0",
-    "vue2-leaflet-markercluster": "^3.1.0",
     "vue-click-outside": "^1.1.0",
     "vue-clipboard2": "^0.3.1",
-    "vuex": "^3.6.0"
+    "vue-types": "^2.0.3",
+    "vue2-leaflet": "^2.6.0",
+    "vue2-leaflet-markercluster": "^3.1.0",
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
-    "lodash": "^4.17.20",
-    "country-language": "^0.1.7",
-    "i18next-client": "^1.11.4",
-    "@types/leaflet": "^1.5.4",
-    "@babel/core": "^7.12.10",
-    "@babel/plugin-proposal-object-rest-spread": "^7.6.2",
+    "@babel/core": "^7.12.13",
+    "@babel/eslint-parser": "^7.12.13",
+    "@babel/plugin-proposal-object-rest-spread": "^7.12.13",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
-    "@babel/preset-env": "^7.11.5",
+    "@babel/preset-env": "^7.12.13",
     "@nextcloud/browserslist-config": "^1.0.0",
     "@nextcloud/eslint-config": "^3.0.0",
     "@nextcloud/eslint-plugin": "^2.0.0",
     "@nextcloud/webpack-vue-config": "^2.0.0",
-    "babel-eslint": "^10.1.0",
+    "@types/leaflet": "^1.5.4",
     "babel-loader": "^8.2.2",
     "clean-webpack-plugin": "^3.0.0",
+    "country-language": "^0.1.7",
     "css-loader": "^5.0.1",
-    "eslint": "^7.15.0",
+    "eslint": "^7.19.0",
     "eslint-config-standard": "^16.0.1",
-    "eslint-loader": "^4.0.2",
-    "eslint-webpack-plugin": "^2.4.1",
+    "eslint-friendly-formatter": "^4.0.1",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-vue": "^7.4.0",
-    "eslint-friendly-formatter": "^4.0.1",
+    "eslint-plugin-vue": "^7.5.0",
+    "eslint-webpack-plugin": "^2.5.0",
     "file-loader": "^6.2.0",
+    "i18next-client": "^1.11.4",
     "jest": "^26.4.2",
     "jest-serializer-vue": "^2.0.2",
     "jsdom": "^16.4.0",
     "jsdom-global": "^3.0.2",
+    "lodash": "^4.17.20",
     "node-sass": "^5.0.0",
     "raw-loader": "^4.0.1",
-    "sass-loader": "^10.0.2",
-    "stylelint": "^13.7.2",
+    "sass-loader": "^11.0.0",
+    "style-loader": "^2.0.0",
+    "stylelint": "^13.9.0",
     "stylelint-config-recommended-scss": "^4.2.0",
     "stylelint-scss": "^3.18.0",
     "stylelint-webpack-plugin": "^2.1.1",
     "url-loader": "^4.1.0",
-    "style-loader": "^2.0.0",
     "vue-loader": "^15.9.3",
     "vue-template-compiler": "^2.6.12",
-    "webpack": "^5.11.1",
-    "webpack-cli": "^4.3.1",
+    "webpack": "^5.21.1",
+    "webpack-cli": "^4.5.0",
     "webpack-merge": "^5.6.1"
   }
 }
