--- a/package.json
+++ b/package.json
@@ -88,6 +88,7 @@
     "eslint-friendly-formatter": "^4.0.1",
     "eslint-plugin-import": "^2.23.4",
     "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^4.3.1",
     "eslint-plugin-vue": "^7.12.1",
     "eslint-webpack-plugin": "^2.5.4",
     "file-loader": "^6.2.0",
