--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
 		"@nextcloud/auth": "^1.3.0",
 		"@nextcloud/axios": "^1.9.0",
 		"@nextcloud/dialogs": "^3.1.2",
+		"@nextcloud/event-bus": "^2.1.1",
 		"@nextcloud/l10n": "^1.4.1",
 		"@nextcloud/moment": "^1.1.1",
 		"@nextcloud/paths": "^2.1.0",
