--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -72,7 +72,7 @@ jobs:
               uses: actions/setup-node@v3
               with:
                   node-version: 12.x
-            - name: npm install
-              run: npm install
+            - name: npm ci
+              run: npm ci
         env:
             CI: true
